# apport

./: .bzrignore  .gitignore  .pylintrc  AUTHORS  NEWS  NEWS.md  README  README.md  TODO  apport  apport-checkreports  apport-retrace  apport-unpack  apport.init.fedora  apport.init.opensuse  apport.spec.fedora  apport.spec.opensuse  apport_python_hook.py  apport_utils.py  constraints.py  crash-reporter  crashdb.conf  do-release  problem_report.py  pyproject.toml  python-apport.spec.opensuse  run-tests  setup.cfg  setup.py  test-apport  test-crash-digger  test-hooks  test-kernelcrash  use-local
apport/: REThread.py  __init__.py  chroot.py  com.ubuntu.apport.policy.in  crashdb.py  elfcore.py  fileutils.py  hook_ui.py  hookutils.py  logging.py  package_info.py  packaging.py  packaging_impl.py  process.py  procutils.py  python_hook.py  report.py  sandboxutils.py  ui.py  user_group.py
backends/: crashdb_launchpad.py  packaging-apt-dpkg.py  packaging-dpkg.py  packaging_fedora.py  packaging_opensuse.py  packaging_rpm.py
chroot-tools/: apport-chroot  apport-retrace-fakechroot  chroot.py  edgy.debootstrap  make-distro-tarball
cli/: apport-cli
data/: apport  apport-checkreports  apport-is-enabled  apport-noui  apport-service  apportcheckresume  com.ubuntu.Apport.service  dump_acpi_tables.py  gcc_ice_hook  iwlwifi_error_dump  java_uncaught_exception  kernel_crashdump  kernel_oops  package_hook  recoverable_problem  unkillable_shutdown  whoopsie-upload-all
debhelper/: apport.pm  dh_apport
debian/: apport-cli.README.Debian  apport-cli.install  apport-gtk.install  apport-kde.install  apport-qt.install  apport-retrace.install  apport-retrace.manpages  apport.README.Debian  apport.cron.daily  apport.default  apport.dirs  apport.examples  apport.init  apport.install  apport.links  apport.manpages  apport.postinst  apport.preinst  apport.upstart  changelog  control  copyright  crash-reporter.init  crash-reporter.install  python-apport-utils.install  python-apport.install  python-apport.postinst  python-problem-report.install  rules  watch
doc/: Makefile  crashdb-conf.md  crashdb-conf.txt  data-format.tex  package-hooks.md  package-hooks.txt  symptoms.md  symptoms.txt
general-hooks/: automatix.py  generic.py  parse_segv.py  ubuntu.py
gtk/: Makefile  apport-gtk  apport-gtk-mime.desktop.in  apport-gtk.desktop.in  apport-gtk.glade  apport-gtk.ui
java/: Makefile  README  TODO  crash.java
kde/: Makefile  apport-kde  apport-kde-mime.desktop.in  apport-kde-mimelnk.desktop.in  apport-kde.desktop.in  bugreport.ui  choices.ui  progress.ui  userpass.ui
man/: apport-bug.1  apport-chroot.1  apport-cli.1  apport-retrace.1  apport-unpack.1  apport-valgrind.1  dupdb-admin.1
monitoring-daemon/: Makefile  main.c
package-hooks/: source_apport.py  source_linux.py
po/: Makefile  Makevars  POTFILES.in  ace.po  af.po  am.po  an.po  apport.pot  ar.po  arn.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ceb.po  ckb.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  (+66 more)
preloadlib/: Makefile  README  libapport.c  libcrashrep.c
qt4/: Makefile  apport-qt  apport-qt-mime.desktop.in  apport-qt.desktop.in  apport-qt4  apport-qt4.desktop.in  bugreport.ui  choices.ui  error.ui
setuptools_apport/: java.py
test/: crash  crash-digger  gtk  hooks  java  kde  python  run  test_apport_forward.py  test_apport_service.py  test_apport_unpack.py  test_apport_valgrind.py  test_backend-apt-dpkg.py  test_backend-rpm.py  test_backend_apt_dpkg.py  test_backend_rpm.py  test_crash_digger.py  test_crashdb.py  test_fileutils.py  test_hooks.py  test_hookutils.py  test_java_crashes.py  test_packaging.py  test_parse_segv.py  test_problem_report.py  test_python_crashes.py  test_recoverable_problem.py  test_report.py  test_rethread.py  test_signal_crashes.py  test_ui.py  test_ui_gtk.py  test_ui_kde.py
tests/: README.md  helper.py  paths.py  run  run-linters  test_apport_unpack.py  test_apport_valgrind.py  test_backend_apt_dpkg.py  test_backend_rpm.py  test_crash_digger.py  test_crashdb.py  test_fileutils.py  test_helper.py  test_hooks.py  test_hookutils.py  test_java_crashes.py  test_packaging.py  test_parse_segv.py  test_ui.py  (+8 more)
tests/data/testclick/: CMakeLists.txt
tests/data/testclick/click/: CMakeLists.txt  manifest.json.in
(+113 files in other folders)
