[project]
authors = [
    {name = "Martin Pitt", email = "martin.pitt@ubuntu.com"},
]
description = "intercept, process, and report crashes and bug reports"
dynamic = ["version"]
license = {text = "GPLv2+"}
name = "apport"
requires-python = ">=3.10"

[tool.black]
line-length = 88

[tool.codespell]
skip = ".git,*.click,*.gif,*.po,*.png"
ignore-words-list = "buildd"

[tool.isort]
line_length = 88
profile = "black"

[tool.pydocstyle]
# TODO: Address the ignored codes (except D203,D213)
ignore = "D1,D203,D205,D209,D213,D400,D401,D402,D415"
match = ".*\\.py"
